<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_Subsystem" Id="{0625d196-cb6d-4bee-9ee7-7900621abd78}">
    <Declaration><![CDATA[//LCLS Defined subsystems, make sure these correspond with casSubsystems in FB_LogMessage
TYPE E_Subsystem :
(
	NILVALUE := 0, //Undefined system
	VACUUM := 1, //Vacuum control system
	MPS := 2, //Machine protection system
	MOTION := 3, //Motion control systems
	FIELDBUS := 4, //EtherCAT networks
	SDS := 5, //Sample delivery system
	OPTICS := 6, //Optics control system
	EPICS := 7	//EPICS Interface
)WORD;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>